fix: 글리스트 중앙정렬, 채팅메세지 state 저장방식 변경

--- a/src/pc/css/table.css
+++ b/src/pc/css/table.css
@@ -36,9 +36,10 @@
 }
 
 .common-table .common-table-tr2 td span {
-  width: 260px;
+  width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   display: block;
 }
+
